[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/BossSceneScript.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Character.gd" type="Script" id=2]

[ext_resource path="res://Assets/Game Jam song boss.wav" type="AudioStream" id=14]
[ext_resource path="res://Scripts/AudioStreamPlayer2D.gd" type="Script" id=15]
[ext_resource path="res://Assets/Tile 3-1.png.png" type="Texture" id=16]
[ext_resource path="res://Assets/Ground (Rock).JPG" type="Texture" id=17]
[ext_resource path="res://Scenes/BossEye.tscn" type="PackedScene" id=18]
[ext_resource path="res://Assets/New Piskel-1.png (2).png" type="Texture" id=19]
[ext_resource path="res://Assets/backboss.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {

"loop": true,
"name": "run",
"speed": 4.0
}, {

} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 61.7866, 40 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 46.0759, 15.1714 )

[sub_resource type="Animation" id=5]
resource_name = "Boss"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("OneWayPlatform/StaticBody2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2240, 440 ), Vector2( 2240, 332.993 ), Vector2( 2240, 440 ), Vector2( 2240, 332.993 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OneWayPlatform/StaticBody2D3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2650, 140 ), Vector2( 2650, 350 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OneWayPlatform/StaticBody2D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2380, 190 ), Vector2( 2380, 280 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("OneWayPlatform/StaticBody2D4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2530, 340 ), Vector2( 2530, 190 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BossEye:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3100, 403.644 ), Vector2( 3100, 290 ), Vector2( 3100, 420 ), Vector2( 3100, 160 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("bosslives:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2972.75, 274.805 ), Vector2( 2972.75, 155.887 ), Vector2( 2972.75, 288.38 ), Vector2( 2972.75, 31.592 ) ]
}

[node name="Boss" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 2573.03, 450.883 )
scale = Vector2( 2.00441, 2.5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 8.8795, 15.3717 )
scale = Vector2( 0.103879, 0.0781554 )
frames = SubResource( 1 )
animation = "jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 8.89248, 15.372 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="Player"]
position = Vector2( 38.7155, 14.2551 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_top = 0
limit_right = 3205
limit_bottom = 600
smoothing_enabled = true
smoothing_speed = 3.0
editor_draw_limits = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( -39.912, -180 )
scale = Vector2( 0.4989, 0.4 )
stream = ExtResource( 14 )
autoplay = true
script = ExtResource( 15 )

[node name="Ground" type="Node2D" parent="."]
editor/display_folded = true

[node name="StaticBody2D" type="StaticBody2D" parent="Ground"]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D11" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 1380, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D11"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D11"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D12" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 1700, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D12"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D12"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D15" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 2482.39, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D15"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D15"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D20" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 2960, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D20"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D20"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D23" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 3080, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D23"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D23"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D21" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 2840, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D21"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D21"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D18" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 2720, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D18"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D18"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D19" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 2602.39, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D19"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D19"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D16" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 2360, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D16"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D16"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D17" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 2240, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D17"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D17"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D13" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 2120, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D13"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D13"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D14" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 2000, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D14"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D14"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 1080, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D2"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D2"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 960, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D3"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D3"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 840, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D4"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D4"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D5" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 720, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D5"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D5"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D6" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 600, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D6"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D6"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D7" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 480, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D7"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D7"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D8" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 360, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D8"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D8"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D9" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 240, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D9"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D9"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="StaticBody2D10" type="StaticBody2D" parent="Ground"]
editor/display_folded = true
position = Vector2( 120, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ground/StaticBody2D10"]
position = Vector2( 64.1264, 559.489 )
scale = Vector2( 0.64987, 0.409803 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/StaticBody2D10"]
position = Vector2( 64.2578, 559.406 )
shape = SubResource( 3 )

[node name="OneWayPlatform" type="Node2D" parent="."]
editor/display_folded = true

[node name="StaticBody2D" type="StaticBody2D" parent="OneWayPlatform"]
position = Vector2( 2240, 440 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="OneWayPlatform/StaticBody2D"]
position = Vector2( 0.415527, 1.66211 )
scale = Vector2( 0.225, 0.0707071 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OneWayPlatform/StaticBody2D"]
position = Vector2( 0.25, 1.49663 )
rotation = 3.14159
shape = SubResource( 4 )

[node name="StaticBody2D2" type="StaticBody2D" parent="OneWayPlatform"]
position = Vector2( 2380, 190 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="OneWayPlatform/StaticBody2D2"]
position = Vector2( 0.415527, 1.66211 )
scale = Vector2( 0.225, 0.0707071 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OneWayPlatform/StaticBody2D2"]
position = Vector2( 0.25, 1.49663 )
shape = SubResource( 4 )

[node name="StaticBody2D4" type="StaticBody2D" parent="OneWayPlatform"]
position = Vector2( 2530, 340 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="OneWayPlatform/StaticBody2D4"]
position = Vector2( 0.415527, 1.66211 )
scale = Vector2( 0.225, 0.0707071 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OneWayPlatform/StaticBody2D4"]
position = Vector2( 0.25, 1.49663 )
shape = SubResource( 4 )

[node name="StaticBody2D3" type="StaticBody2D" parent="OneWayPlatform"]
position = Vector2( 2650, 140 )
z_index = -1
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="OneWayPlatform/StaticBody2D3"]
position = Vector2( 0.415527, 1.66211 )
scale = Vector2( 0.225, 0.0707071 )
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OneWayPlatform/StaticBody2D3"]
position = Vector2( 0.25, 1.49663 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Boss"
anims/Boss = SubResource( 5 )

[node name="BossEye" parent="." groups=[
"Boss",
] instance=ExtResource( 18 )]
position = Vector2( 3100, 403.644 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="lives + etc" type="Node2D" parent="CanvasLayer"]
editor/display_folded = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/lives + etc"]
margin_right = 200.0
margin_bottom = 70.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Lives" type="Node2D" parent="CanvasLayer/lives + etc"]

[node name="Sprite" type="Sprite" parent="CanvasLayer/lives + etc/Lives"]
position = Vector2( 160, 40 )
scale = Vector2( 0.266, 0.23 )
texture = ExtResource( 19 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/lives + etc/Lives"]
position = Vector2( 100, 40 )
scale = Vector2( 0.266, 0.23 )
texture = ExtResource( 19 )

[node name="Sprite3" type="Sprite" parent="CanvasLayer/lives + etc/Lives"]
position = Vector2( 40, 40 )
scale = Vector2( 0.266, 0.23 )
texture = ExtResource( 19 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 727.494, -8.52054 )
texture = ExtResource( 20 )

[node name="bosslives" type="Node2D" parent="."]
position = Vector2( 2972.75, 274.805 )
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="bosslives"]
margin_left = 45.0
margin_right = 203.0
margin_bottom = 31.0
color = Color( 0, 0, 0, 0.25098 )

[node name="Lives" type="Node2D" parent="bosslives"]

[node name="Sprite" type="Sprite" parent="bosslives/Lives"]
position = Vector2( 186.186, 15.793 )
scale = Vector2( 0.151843, 0.130972 )
texture = ExtResource( 19 )

[node name="Sprite2" type="Sprite" parent="bosslives/Lives"]
position = Vector2( 157.137, 16.6733 )
scale = Vector2( 0.151843, 0.130972 )
texture = ExtResource( 19 )

[node name="Sprite3" type="Sprite" parent="bosslives/Lives"]
position = Vector2( 127.207, 16.6733 )
scale = Vector2( 0.151843, 0.130972 )
texture = ExtResource( 19 )

[node name="Sprite4" type="Sprite" parent="bosslives/Lives"]
position = Vector2( 96.3984, 16.6733 )
scale = Vector2( 0.151843, 0.130972 )
texture = ExtResource( 19 )

[node name="Sprite5" type="Sprite" parent="bosslives/Lives"]
position = Vector2( 64.2695, 16.2332 )
scale = Vector2( 0.151843, 0.130972 )
texture = ExtResource( 19 )
[connection signal="animation_finished" from="Player/AnimatedSprite" to="Player" method="_on_AnimatedSprite_animation_finished"]
